Revert "refactor: tune performance for medium-sized arrays"
This reverts commit 410580f6ce12b7e09bad4cea01fc006511e9d9f6.

Benchmarks have shown, List.of() performance is worse for non-varargs.